--- a/app/src/main/res/layout/activity_filme.xml
+++ b/app/src/main/res/layout/activity_filme.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#111111"
-    tools:context=".Activities.FilmeActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical" android:background="#111111"
+    tools:context="com.leonardoserra.watchlist.Activities.MyListtActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#111111">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <include layout="@layout/tool_bar"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imgPoster"
-        android:layout_width="180dp"
-        android:layout_height="266dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/img"
-        android:contentDescription="poster" />
+            <ImageView
+                android:id="@+id/imgPoster"
+                android:layout_width="180dp"
+                android:layout_height="266dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
+                android:src="@drawable/img"
+                android:contentDescription="poster" />
 
-    <TextView
-        android:id="@+id/txtMovieTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/cinze"
-        android:text="@string/titulo_filme"
-        android:textSize="18sp" />
+            <TextView
+                android:id="@+id/txtMovieTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/cinzaClaro"
+                android:text="@string/titulo_filme"
+                android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/btnAddRemove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:onClick="adicionarOuRetirar"
-        android:background="#f35100"
-        android:textColor="#000000"
-        android:text="@string/botao_adiciona_remove"/>
+            <Button
+                android:id="@+id/btnAddRemove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:onClick="adicionarOuRetirar"
+                android:background="#f35100"
+                android:textColor="#000000"
+                android:text="@string/botao_adiciona_remove"/>
 
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
-</ScrollView>
