--- a/app/src/main/res/layout/activity_resultado_busca.xml
+++ b/app/src/main/res/layout/activity_resultado_busca.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".Activities.ResultadoBuscaActivity"
     android:orientation="vertical"
     android:background="#111111"
-    android:weightSum="1"
-    tools:context=".Activities.ResultadoBuscaActivity">
-
-    <include
-        layout="@layout/tool_bar"/>
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
         android:layout_marginLeft="16dp"
         android:text="New Text"
         android:id="@+id/txtFraseBusca"
-        android:textColor="@color/cinze" />
+        android:textColor="@color/cinzaClaro" />
 
     <ListView
         android:layout_width="wrap_content"
