--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,32 +5,40 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/preto"
-    android:weightSum="1"
     tools:context=".Activities.MainActivity">
 
     <include
         layout="@layout/tool_bar"/>
 
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0.21" />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Search"
+        android:text="@string/chamada"
         android:id="@+id/textView"
-        android:layout_marginTop="140dp"
-        android:layout_gravity="center_horizontal"
         android:textColor="@color/laranja"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_weight="0.07"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0.28" />
 
     <EditText
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/edtSearchAMovie"
         android:layout_gravity="center_horizontal"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="140dp"
         android:background="#CCCCCC"
         android:singleLine="true"
         android:textAlignment="center"
@@ -41,19 +49,30 @@
         android:gravity="center_vertical|center_horizontal"
         android:enabled="true"
         android:allowUndo="true"
-        android:hint="@string/chamada" />
+        android:hint="@string/exemplo_filme"
+        android:layout_weight="0.07" />
+
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0.035" />
 
     <Button
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/search_a_movie"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginLeft="28dp"
         android:id="@+id/btnSearchAMovie"
         android:layout_gravity="center_horizontal"
         android:onClick="busca"
         android:padding="4dp"
-        android:layout_marginTop="20dp"
         android:background="#f35100"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_weight="0.035" />
+
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0.28" />
 </LinearLayout>
