--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,11 @@
 
     <Space
         android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:layout_weight="0.21" />
+        android:layout_height="0dp"
+        android:layout_weight="0.5" />
 
     <TextView
-        android:layout_width="190dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/chamada"
@@ -24,21 +24,21 @@
         android:textColor="@color/laranja"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_weight="0.07"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:textSize="32sp" />
 
     <Space
         android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:layout_weight="0.28" />
+        android:layout_height="0dp"
+        android:layout_weight="0.2" />
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:id="@+id/edtSearchAMovie"
         android:layout_gravity="center_horizontal"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginLeft="44dp"
         android:background="#CCCCCC"
         android:singleLine="true"
         android:textAlignment="center"
@@ -50,29 +50,29 @@
         android:enabled="true"
         android:allowUndo="true"
         android:hint="@string/exemplo_filme"
-        android:layout_weight="0.07" />
+        android:textSize="18sp" />
 
     <Space
         android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:layout_weight="0.035" />
+        android:layout_height="0dp"
+        android:layout_weight="0.1" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="@string/search_a_movie"
-        android:layout_marginRight="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
         android:id="@+id/btnSearchAMovie"
         android:layout_gravity="center_horizontal"
         android:onClick="busca"
         android:padding="4dp"
         android:background="#f35100"
         android:textColor="#000000"
-        android:layout_weight="0.035" />
+        android:textSize="18sp" />
 
     <Space
         android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:layout_weight="0.28" />
+        android:layout_height="0dp"
+        android:layout_weight="0.2" />
 </LinearLayout>
