--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
     <TextView
         android:layout_width="320dp"
         android:layout_height="wrap_content"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/chamada"
         android:id="@+id/textView"
